<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/help_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:background="@drawable/icon"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="8dip"
            android:text="@string/app_name"
            android:textScaleX="3.0"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/border_title_bg"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/help_title_layout"
        android:background="#FF00AB00" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/border_title_bg"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" >

            <TextView
                android:id="@+id/help_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_more" />
        </ScrollView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_weight="1"
            android:background="#FF00AB00" />

        <Button
            android:id="@+id/help_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/help_bn_close_bg"
            android:text="@string/close" />
    </LinearLayout>

</RelativeLayout>