<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bj"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/boy"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/font"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/textview_start"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/setting_font"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10.0dip"
                    android:background="@drawable/iconin_2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:background="@drawable/textview_mid"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/setting_pf"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10.0dip"
                    android:background="@drawable/iconin_2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:background="@drawable/textview_mid"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/setting_about"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10.0dip"
                    android:background="@drawable/iconin_2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:background="@drawable/textview_end"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/setting_share"
                    android:textColor="@android:color/white"
                    android:textSize="16.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10.0dip"
                    android:background="@drawable/iconin_2" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>